# supabase-py-lite

./: LICENSE  README.md  pyproject.toml
examples/: quickstart.py
src/supabase_py_lite/: __init__.py  client.py  exceptions.py  response.py
src/supabase_py_lite/auth/: __init__.py  client.py  types.py
src/supabase_py_lite/engine/: __init__.py  base.py  sqlite.py
src/supabase_py_lite/query/: __init__.py  builder.py  delete.py  filters.py  insert.py  select.py  update.py
tests/: conftest.py  test_auth.py  test_core.py  test_fk.py  test_or_not.py
