[project]
name = "supabase-py-lite"
version = "0.1.0"
description = "In-memory Supabase client for testing. Drop-in replacement for supabase-py backed by SQLite."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Atakan Celikyurek", email = "atkncelikyurek@gmail.com" }]
keywords = ["supabase", "sqlite", "testing", "mock", "postgrest", "in-memory"]
dependencies = []

[project.optional-dependencies]
duckdb = ["duckdb>=0.9.0"]

[dependency-groups]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/acelikyurek/supabase-py-lite"
Repository = "https://github.com/acelikyurek/supabase-py-lite"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supabase_py_lite"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
strict = true
